Add basic descriptions to example

--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 
 	<body>
 		<h1>Circular heat chart examples</h1>
+		<p>Simple chart</p>
 		<div id="chart1"></div>
-    <div id="chart2"></div>
-    <div id="chart3"></div>
-    <div id="info"></div>
+		<p>Array of charts</p>
+		<div id="chart2"></div>
+		<p>Events (try hovering over chart)</p>
+		<div id="chart3"></div>
+		<div id="info"></div>
 		<footer>
 			<p>Built with <a href="http://d3js.org">D3</a>. Chart development by <a href="http://prcweb.co.uk">Peter Cook</a>.</p>
 		</footer>
